WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35060
Reproducible crash in WebCore::nextLinePosition on Tweeteorites.com
https://bugs.webkit.org/show_bug.cgi?id=35060
Summary
Reproducible crash in WebCore::nextLinePosition on Tweeteorites.com
Enrica Casucci
Reported
2010-02-17 14:59:55 PST
Attached a repro case.
Attachments
Patch
(5.38 KB, patch)
2010-02-17 17:04 PST
,
Enrica Casucci
mitz: review+
Details
Formatted Diff
Diff
Patch2
(5.98 KB, patch)
2010-02-22 11:52 PST
,
Enrica Casucci
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2010-02-17 17:04:52 PST
Created
attachment 48949
[details]
Patch
Tony Chang
Comment 2
2010-02-17 17:14:28 PST
Does there need to be a similar check in previousLinePosition too?
Alexey Proskuryakov
Comment 3
2010-02-17 17:25:07 PST
+</html> \ No newline at end of file Property changes on: LayoutTests/editing/selection/extend-byline-withfloat.html ___________________________________________________________________ Added: svn:executable + * Please add one; please remove that.
mitz
Comment 4
2010-02-17 17:52:11 PST
Comment on
attachment 48949
[details]
Patch
> +</html> > \ No newline at end of file
Please add a newline
> > Property changes on: LayoutTests/editing/selection/extend-byline-withfloat.html > ___________________________________________________________________ > Added: svn:executable > + *
And don’t set the executable bit on the test. The test as it stands may depend on font metrics, and since it specifies Helvetica, it may not work on all platforms. Not sure if that’s going to be a problem.
Eric Seidel (no email)
Comment 5
2010-02-19 16:23:14 PST
Attachment 48949
[details]
was posted by a committer and has review+, assigning to Enrica Casucci for commit.
Enrica Casucci
Comment 6
2010-02-22 11:20:21 PST
(In reply to
comment #2
)
> Does there need to be a similar check in previousLinePosition too?
Yes. You are absolutely correct. I'll post a new patch with that fix too.
Enrica Casucci
Comment 7
2010-02-22 11:52:06 PST
Created
attachment 49230
[details]
Patch2 Added missing new line at the end of the test and removed execute permission. I've also changed previousLinePosition to fix the same bug as pointed out by Tony (thanks!!). Updated the test case to cover that too.
Enrica Casucci
Comment 8
2010-02-22 12:06:29 PST
Committed revision 55098.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug