Reproducible crash in WebCore::nextLinePosition on Tweeteorites.com <rdar://problem/7615758> https://bugs.webkit.org/show_bug.cgi?id=35060

Reviewed by Dan Bernstein.

WebCore:

Test: editing/selection/extend-byline-withfloat.html

* editing/visible_units.cpp:
(WebCore::previousLinePosition): Skip elements with zero height.
(WebCore::nextLinePosition): Skip elements with zero height.

LayoutTests:

* editing/selection/extend-byline-withfloat-expected.txt: Added.
* editing/selection/extend-byline-withfloat.html: Added.



Canonical link: https://commits.webkit.org/46401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55098 268f45cc-cd09-0410-ab3c-d52691b4dbfc